Remove focus outline and fix alignment issues in list items.

--- a/image-action.scss
+++ b/image-action.scss
@@ -7,8 +7,8 @@
 
 	>li {
 		display: inline-block;
-		padding-left: 0.72rem;
-		padding-right: 0.72rem;
+		padding: 0.2rem 0.72rem 0.2rem 0.72rem;
+		vertical-align: middle;
 	}
 
 	>li:first-child {
@@ -54,10 +54,6 @@
 		[dir='rtl'] & {
 			background-position: right top;
 		}
-	}
-
-	&:focus {
-		@include vui-focus-outline;
 	}
 
 	&:hover,
